--- a/0x02-CSS_advanced/styles/5-style.css
+++ b/0x02-CSS_advanced/styles/5-style.css
@@ -17,6 +17,8 @@
     --font-size-large: 1.8rem;
     --font-size-x-large: 2.3rem;
     --font-size-xx-large: 4.8rem;
+}
+html{
     font-size: 62.5%;
 }
 body{
