--- a/0x02-CSS_advanced/styles/13-style.css
+++ b/0x02-CSS_advanced/styles/13-style.css
@@ -39,22 +39,19 @@ h1, h2, h3, h4, h5, h6{
     font-family: var(--font-family-title);
     font-weight: var(--font-weight-bold);
 }
-a[href]:not(.visually-hidden){
+a[href]{
     color: var(--color-black);
     text-decoration: none;
 }
-a[href]:not(.visually-hidden):visited{
-    color: var(--color-black);
-    text-decoration: none;
+a[href]:visited{
     font-style: italic;
 }
-a[href]:not(.visually-hidden):hover{
+a[href]:hover{
     text-decoration: underline;
 }
-a[href]:not(.visually-hidden):active{
+a:active{
     background-color: var(--color-light-grey);
 }
-
 .visually-hidden{
     display: none;
 }
