--- a/0x02-CSS_advanced/styles/18-style.css
+++ b/0x02-CSS_advanced/styles/18-style.css
@@ -387,7 +387,7 @@
     --nav-item-font-size:var(--font-size-medium);
     --nav-item-letter-spacing: 4%;
     --nav-item-display: inline-block;
-    --nav-item-margin: 0 0 3rem 0;
+    --nav-item-margin:0 0 3rem 0;
     --nav-item-link-hover:var(--color-primary);
 }
 body{
@@ -400,12 +400,13 @@ body{
 .navbar-menu{
     float: right;
 }
-nav{
+.nav{
     margin: 0;
     padding: 0;
+    list-style: none;
     text-align: center;
 }
-.nav-item{
+.nav.nav-item{
     font-family: var(--nav-item-font-family);
     font-weight: var(--nav-item-font-weight);
     font-size: var(--nav-item-font-size);
@@ -413,11 +414,11 @@ nav{
     display: var(--nav-item-display);
     margin: var(--nav-item-margin);
 }
-.nav-link{
+.nav.nav-link{
     display: block;
-    padding: calc(var(--font-size-medium) / 2) var(--font-size-medium);
+    padding: calc(1rem / 2) 1rem;
 }
-.nav-link:hover{
+.nav.nav-link:hover{
     background-color: var(--nav-item-link-hover);
 }
 h1, h2, h3, h4, h5, h6{
