--- a/0x02-CSS_advanced/styles/18-style.css
+++ b/0x02-CSS_advanced/styles/18-style.css
@@ -383,12 +383,12 @@
     --section-footer-align: center;
     --footer-padding: 5rem 0 1rem;
     --nav-item-font-family: var(--font-family-title);
-    --nav-item-font-weight:var(--font-weight-bold);
-    --nav-item-font-size:var(--font-size-medium);
+    --nav-item-font-weight: var(--font-weight-bold);
+    --nav-item-font-size: var(--font-size-medium);
     --nav-item-letter-spacing: 4%;
     --nav-item-display: inline-block;
-    --nav-item-margin:0 0 3rem 0;
-    --nav-item-link-hover:var(--color-primary);
+    --nav-item-margin: 0 0 3rem 0;
+    --nav-item-link-hover: var(--color-primary);
 }
 body{
     color: var(--color-black);
@@ -406,7 +406,7 @@ body{
     list-style: none;
     text-align: center;
 }
-.nav-item{
+.nav .nav-item{
     font-family: var(--nav-item-font-family);
     font-weight: var(--nav-item-font-weight);
     font-size: var(--nav-item-font-size);
@@ -414,7 +414,7 @@ body{
     display: var(--nav-item-display);
     margin: var(--nav-item-margin);
 }
-.nav.nav-link{
+.nav-item .nav-link{
     display: block;
     padding: calc(var(--font-size-medium) / 2) var(--font-size-medium);
 }
