--- a/0x02-CSS_advanced/styles/18-style.css
+++ b/0x02-CSS_advanced/styles/18-style.css
@@ -387,7 +387,7 @@
     --nav-item-font-size: var(--font-size-medium);
     --nav-item-letter-spacing: 4%;
     --nav-item-display: inline-block;
-    --nav-item-margin: 0 0 3rem 0;
+    --nav-item-margin: 0 0 calc(var(--root-element) * 3) 0;
     --nav-item-link-hover: var(--color-primary);
 }
 body{
@@ -416,9 +416,9 @@ body{
 }
 .nav-item .nav-link{
     display: block;
-    padding: calc(var(--font-size-medium) / 2) var(--font-size-medium);
+    padding: calc(var(--root-element) / 2) 0;
 }
-.nav-item .nav-link:hover{
+.nav-link:hover{
     background-color: var(--nav-item-link-hover);
 }
 h1, h2, h3, h4, h5, h6{
