--- a/0x02-CSS_advanced/styles/19-style.css
+++ b/0x02-CSS_advanced/styles/19-style.css
@@ -390,7 +390,6 @@
     --nav-item-margin: 0 0 3rem 0;
     --nav-item-link-hover: var(--color-primary);
     --section-tagline-margin: 0;
-    --col-padding: calc(var(--root-element) / 2);
 }
 body{
     color: var(--color-black);
@@ -488,13 +487,12 @@ ul.row{
 .col-1-3{
     width: 33.33%;
     float: left;
-    padding: var(--col-padding);
+    padding: calc(1rem / 2);
 }
 .col-1-2{
     width: 50%;
     float: left;
-    padding: var(--col-padding);
-
+    padding: calc(1rem / 2);
 }
 .footer{
     padding: var(--footer-padding);
@@ -503,7 +501,7 @@ ul.row{
 .footer-copyright{
     margin: 0;
     font-size: var(--font-size-small);
-    background-color: var(--text-color);
+    color: var(--color-black);
 }
 .footer ul{
     text-align: right;
