--- a/0x02-CSS_advanced/styles/29-style.css
+++ b/0x02-CSS_advanced/styles/29-style.css
@@ -456,12 +456,12 @@ body{
 .nav-link:hover{
     background-color: var(--nav-item-link-hover);
 }
-.nav-link::before{
+.nav .nav-link::before{
     content: "";
     position: absolute;
     top: 0;
     left: 0;
-    color: var(--nav-item-link-hover);
+    background-color: var(--nav-item-link-hover);
     width: 0;
     height: 20%;
 }
