--- a/0x02-CSS_advanced/styles/29-style.css
+++ b/0x02-CSS_advanced/styles/29-style.css
@@ -465,6 +465,11 @@ body{
     width: 0;
     height: 20%;
 }
+.nav-item:hover .nav-link::before{
+    background-color: var(--color-primary);
+    width: 100%;
+
+}
 .section-hero{
     background-size: 90rem auto;
     width: 90rem;
