--- a/0x02-CSS_advanced/styles/29-style.css
+++ b/0x02-CSS_advanced/styles/29-style.css
@@ -465,7 +465,7 @@ body{
     width: 0;
     height: 20%;
 }
-.nav-item:hover .nav-link::before{
+.nav .nav-item:hover .nav-link::before{
     background-color: var(--color-primary);
     width: 100%;
 
