--- a/0x02-CSS_advanced/styles/5-style.css
+++ b/0x02-CSS_advanced/styles/5-style.css
@@ -1,8 +1,8 @@
-*{
+/* *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
+} */
 :root{
     --color-primary: #d73953;
     --color-black: #090909;
@@ -17,7 +17,7 @@
     --font-size-large: 1.8rem;
     --font-size-x-large: 2.3rem;
     --font-size-xx-large: 4.8rem;
-    font-size: 62.5%;
+    --html-font-size: 62.5%;
 }
 body{
     color: var(--color-black);
