--- a/0x02-CSS_advanced/styles/5-style.css
+++ b/0x02-CSS_advanced/styles/5-style.css
@@ -19,6 +19,9 @@
     --font-size-xx-large: 4.8rem;
     --html-font-size: 62.5%;
 }
+html {
+    font-size: var(--html-font-size);
+  }  
 body{
     color: var(--color-black);
     font-family: var(--font-family-base);
