--- a/0x02-CSS_advanced/styles/7-style.css
+++ b/0x02-CSS_advanced/styles/7-style.css
@@ -11,16 +11,19 @@
     --color-dark-grey: #353535;
     --text-color: var(--color-black);
     --font-family-base: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    --font-family-title: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  --font-family-title: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     --font-size-small: 1.2rem;
     --font-size-medium: 1.6rem;
     --font-size-large: 1.8rem;
     --font-size-x-large: 2.3rem;
     --font-size-xx-large: 4.8rem;
-    font-size: 62.5%;
+    --html-font-size: 62.5%;
     --font-weight-regular: 400;
     --font-weight-bold: 700;
 }
+html {
+    font-size: var(--html-font-size);
+  } 
 body{
     color: var(--color-black);
     font-family: var(--font-family-base);
