--- a/0x02-CSS_advanced/styles/13-style.css
+++ b/0x02-CSS_advanced/styles/13-style.css
@@ -42,18 +42,16 @@ h1, h2, h3, h4, h5, h6{
 a[href]{
     color: var(--color-black);
     text-decoration: none;
-  
-&:visited {
-    font-display: italic;
-    }
-&:hover {
-      text-decoration: underline;
-    }
-&:active {
-      background-color: var(--color-light-grey);
-    }
 }
-  
+a:visited{
+    font-style: italic;
+}
+a:hover{
+    text-decoration: underline;
+}
+a:active{
+    background-color: var(--color-light-grey);
+}
 .visually-hidden{
     display: none;
 }
