--- a/0x02-CSS_advanced/styles/15-style.css
+++ b/0x02-CSS_advanced/styles/15-style.css
@@ -347,7 +347,6 @@
   [hidden] {
     display: none;
   }
-
 :root{
     --color-primary: #d73953;
     --color-black: #090909;
@@ -362,7 +361,7 @@
     --font-size-large: 1.8rem;
     --font-size-x-large: 2.3rem;
     --font-size-xx-large: 4.8rem;
-    font-size: 62.5%;
+    --html-font-size: 62.5%;
     --font-weight-regular: 400;
     --font-weight-bold: 700;
     --line-height-small: 1.2;
@@ -376,6 +375,9 @@
 *{
   box-sizing: border-box;
 }
+html {
+  font-size: var(--html-font-size);
+} 
 body{
     color: var(--color-black);
     font-family: var(--font-family-base);
