--- a/0x02-CSS_advanced/styles/5-style.css
+++ b/0x02-CSS_advanced/styles/5-style.css
@@ -1,8 +1,7 @@
-/* *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-} */
+html{
+    scroll-behavior: smooth;
+    font-size: 62.5%;
+}
 :root{
     --color-primary: #d73953;
     --color-black: #090909;
@@ -17,11 +16,7 @@
     --font-size-large: 1.8rem;
     --font-size-x-large: 2.3rem;
     --font-size-xx-large: 4.8rem;
-    --html-font-size: 62.5%;
 }
-html {
-    font-size: var(--html-font-size);
-  }  
 body{
     color: var(--color-black);
     font-family: var(--font-family-base);
