--- a/0x02-CSS_advanced/styles/12-style.css
+++ b/0x02-CSS_advanced/styles/12-style.css
@@ -1,7 +1,6 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+html{
+    scroll-behavior: smooth;
+    font-size: 62.5%;
 }
 :root{
     --color-primary: #d73953;
@@ -17,7 +16,6 @@
     --font-size-large: 1.8rem;
     --font-size-x-large: 2.3rem;
     --font-size-xx-large: 4.8rem;
-    font-size: 62.5%;
     --font-weight-regular: 400;
     --font-weight-bold: 700;
     --line-height-small: 1.2;
