--- a/0x02-CSS_advanced/styles/16-style.css
+++ b/0x02-CSS_advanced/styles/16-style.css
@@ -347,11 +347,13 @@
   [hidden] {
     display: none;
   }
-  
-  *{
+  * {
     box-sizing: border-box;
   }
-
+  html{
+    scroll-behavior: smooth;
+    font-size: 62.5%;
+}
 :root{
     --color-primary: #d73953;
     --color-black: #090909;
@@ -366,7 +368,6 @@
     --font-size-large: 1.8rem;
     --font-size-x-large: 2.3rem;
     --font-size-xx-large: 4.8rem;
-    font-size: 62.5%;
     --font-weight-regular: 400;
     --font-weight-bold: 700;
     --line-height-small: 1.2;
@@ -392,10 +393,10 @@ a[href]{
     color: var(--color-black);
     text-decoration: none;
 }
-a[href]:visited{
+a:visited{
     font-style: italic;
 }
-a[href]:hover{
+a:hover{
     text-decoration: underline;
 }
 a:active{
