adding scroll behaviour and fontsize for the html elements

--- a/0x02-CSS_advanced/styles/17-style.css
+++ b/0x02-CSS_advanced/styles/17-style.css
@@ -347,11 +347,13 @@
   [hidden] {
     display: none;
   }
-  
-  *{
+  * {
     box-sizing: border-box;
   }
-
+  html{
+    scroll-behavior: smooth;
+    font-size: 62.5%;
+}
 :root{
     --color-primary: #d73953;
     --color-black: #090909;
