--- a/0x02-CSS_advanced/styles/19-style.css
+++ b/0x02-CSS_advanced/styles/19-style.css
@@ -457,13 +457,18 @@ a:active{
 .section-body{
   padding: var(--section-body-padding);
 }
-.section-body ul.row{
+ul.row{
   margin: 0;
   padding: 0;
   list-style: none;
 }
 .col-1-3{
   width: 33.33%;
+  float: left;
+  padding: var(--font-size-medium);
+}
+.col-1-2{
+  width: 50%;
   float: left;
   padding: var(--font-size-medium);
 }
@@ -484,12 +489,6 @@ a:active{
   text-transform: var(--section-tagline-transform);
   font-weight: var(--font-weight-bold);
   margin: var(--section-tagline-margin);
-}
-
-.col-1-2{
-  width: 50%;
-  float: left;
-  padding: var(--font-size-medium);
 }
 .container{
   width: 960px;
