--- a/0x02-CSS_advanced/styles/21-style.css
+++ b/0x02-CSS_advanced/styles/21-style.css
@@ -471,10 +471,12 @@ ul.row{
   float: left;
   padding: var(--font-size-medium);
 }
-.col-1-3,
-.col-1-2 {
-  width: auto;
-  padding: 0;
+.col-1-3{
+  width: 33.33%;
+}
+.col-1-2{
+  width: 50%;
+
 }
 .section-footer{
   padding: var(--section-footer-padding);
