--- a/0x02-CSS_advanced/styles/21-style.css
+++ b/0x02-CSS_advanced/styles/21-style.css
@@ -471,13 +471,17 @@ ul.row{
   float: left;
   padding: var(--font-size-medium);
 }
-.col-1-3{
-  width: 33.33%;
-}
-.col-1-2{
-  width: 50%;
 
+.col-1-3 {
+  width: 33.33%;
+  padding: var(--font-size-medium); 
 }
+
+.col-1-2 {
+  width: 50%;
+  padding: var(--font-size-medium); 
+}
+
 .section-footer{
   padding: var(--section-footer-padding);
   text-align: var(--section-footer-align);
