--- a/0x02-CSS_advanced/styles/25-style.css
+++ b/0x02-CSS_advanced/styles/25-style.css
@@ -347,12 +347,14 @@
   [hidden] {
     display: none;
   }
-  
-  *{
+  * {
     box-sizing: border-box;
   }
-
-:root{
+  html{
+    scroll-behavior: smooth;
+    font-size: 62.5%;
+  }
+  :root{
     --color-primary: #d73953;
     --color-black: #090909;
     --color-white: #ffffff;
@@ -366,7 +368,6 @@
     --font-size-large: 1.8rem;
     --font-size-x-large: 2.3rem;
     --font-size-xx-large: 4.8rem;
-    font-size: 62.5%;
     --font-weight-regular: 400;
     --font-weight-bold: 700;
     --line-height-small: 1.2;
@@ -374,6 +375,7 @@
     --line-height-big: 1.8;
     --section-header-align: center;
     --section-tagline-transform: uppercase ;
+    --section-tagline-margin: 0;
     --section-title-margin: 0;
     --section-title-color: var(--color-black);
     --section-padding: 5rem 0;
@@ -385,11 +387,10 @@
     --nav-item-font-family: var(--font-family-title);
     --nav-item-font-weight: var(--font-weight-bold);
     --nav-item-font-size: var(--font-size-medium);
-    --nav-item-letter-spacing: 4%;
+    --nav-item-letter-spacing: 0.4em;
     --nav-item-display: inline-block;
-    --nav-item-margin: 0 0 3rem 0;
+    --nav-item-margin: 0 0 3rem;
     --nav-item-link-hover: var(--color-primary);
-    --section-tagline-margin: 0;
     --button-display: inline-block;
     --button-padding:1.5rem 3rem;
     --button-border: 0.2rem solid var(--color-primary);
@@ -399,7 +400,7 @@
     --button-hover-color: var(--color-white);
     --button-hover-text-decoration: none;
     --button-hover-background: var(--color-primary);
-}
+  }
 body{
     color: var(--color-black);
     font-family: var(--font-family-base);
