--- a/0x02-CSS_advanced/styles/15-style.css
+++ b/0x02-CSS_advanced/styles/15-style.css
@@ -347,8 +347,8 @@
   [hidden] {
     display: none;
   }
-  * {
-    box-sizing: border-box;
+  *, *:before, *:after {
+    box-sizing: inherit;
   }
   html{
     scroll-behavior: smooth;
@@ -394,10 +394,10 @@ a[href]{
     color: var(--color-black);
     text-decoration: none;
 }
-a[href]:visited{
+a:visited{
     font-style: italic;
 }
-a[href]:hover{
+a:hover{
     text-decoration: underline;
 }
 a:active{
