--- a/0x02-CSS_advanced/styles/18-style.css
+++ b/0x02-CSS_advanced/styles/18-style.css
@@ -386,7 +386,7 @@ html{
   --nav-item-font-family: var(--font-family-title);
   --nav-item-font-weight: var(--font-weight-bold);
   --nav-item-font-size: var(--font-size-medium);
-  --nav-item-letter-spacing: 0.4em;
+  --nav-item-letter-spacing: 4rem;
   --nav-item-display: inline-block;
   --nav-item-margin: 0 0 3rem;
   --nav-item-link-hover: var(--color-primary);
@@ -421,7 +421,7 @@ h1, h2, h3, h4, h5, h6{
 }
 .nav .nav-link{
   display: block;
-  padding: var(--nav-item-font-size) 0;
+  padding: 10px;
 }
 .nav .nav-link:hover {
   color: var(--nav-item-link-hover);
