--- a/0x02-CSS_advanced/styles/29-style.css
+++ b/0x02-CSS_advanced/styles/29-style.css
@@ -470,9 +470,9 @@ body{
   position: absolute;
   top: 0;
   left: 0;
-  background-color: var(--nav-item-link-hover);
+  background-color: var(--color-white);
   width: 0;
-  height: 20%;
+  height: 0.2rem;
 }
 .nav .nav-item:hover .nav-link::before {
   background-color: var(--color-primary);
