--- a/0x03-responsive_design/06-styles.css
+++ b/0x03-responsive_design/06-styles.css
@@ -1,3 +1,4 @@
+
 /* SUMMARY
 1. GLOBAL
 2. LAYOUT
@@ -167,10 +168,7 @@
   
   /* Helpers
       ============================= */
-      main img {
-        width: 100%;
-        height: auto;
-    }
+  
   .visually-hidden:not(:focus):not(:active) {
     position: absolute !important;
     height: 1px;
@@ -179,6 +177,11 @@
     clip: rect(1px, 1px, 1px, 1px);
     white-space: nowrap;
   }
+
+  main img {
+      width: 100%;
+      height: auto;
+  }
   
   /*** 2. LAYOUT ***/
   
@@ -186,6 +189,7 @@
       ============================= */
   
   .container {
+    width: 100%;
     max-width: 960px;
     margin-left: auto;
     margin-right: auto;
@@ -217,30 +221,24 @@
   }
 
   @media screen and (max-width: 767px) {
-    ul.row {
-        margin: 0;
-    }
-
-    .row {
-        flex-direction: column;
-    }
-
-    [class^='col-'] {
-        margin: 0 0 3rem 0;
-    }
-
-    .col-1-3,
-    .col-1-2 {
-        width: 100%;
-    }
-    :root {
+      :root {
         --section-padding: 5rem 1.5rem;
         --section-body-padding: 2rem 0 0;
-    }
-}
+      }
 
-  /* Grid section */
+      ul.row, .row {
+          flex-direction: column;
+          margin: 0;
+      }
 
+      [class^="col-"] {
+          margin: 0 0 3rem 0;
+      }
+
+      .col-1-3, .col-1-2 {
+          width: 100%;
+      }
+  }
   
   /* Navbar
       ============================= */
@@ -290,107 +288,87 @@
     background-color: var(--color-primary);
     width: 100%;
   }
+
   @media screen and (max-width: 767px) {
-    .navbar-menu {
-        display: none;
-    }
-    :root {
-        --nav-item-margin: 0;
-    }
-    .navbar-menu {
-        flex: 1;
-    }    
-    .header .nav{
-        flex-direction: column;
-        overflow: hidden;
-        max-height: 0;
-        transition: max-height .2s ease-out;
-    }
-    .header .menu-icon{
-        position: relative;
-        padding: 2.5rem;
-        user-select: none;
-        cursor: pointer;
+      :root {
+          --nav-item-margin: 0
       }
-      .header .menu-icon .navicon{
-        position: relative;
-        background-color: var(--color-white);
-        display: block;
-        width: 2rem;
-        height: .2rem;
-        transition: background .2s ease-out;
+
+      .navbar-menu {
+          display: none;
+          flex: 1;
       }
-      .header .menu-icon .navicon::before,
-    .header .menu-icon .navicon::after {
-        content: '';
-        display: block;
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        background: var(--color-white);
-        transition: all .2s ease-out;
-    }
-    .header .menu-icon .navicon::before {
-        top: .7rem;
-    }
-    .header .menu-icon .navicon::after {
-        top: -.7rem; 
-    }
+
+      .header .nav {
+          flex-direction: column;
+          overflow: hidden;
+          max-height: 0;
+          transition: max-height .2s ease-out;
+      }
   }
 
-  /* menu btn */
-  .header .menu-btn{
+   /* menu btn */
+   .header .menu-btn {
     display: none;
-  }
-  .header .menu-btn:checked ~ .navbar-menu{
+}
+
+.header .menu-btn:checked ~ .navbar-menu {
     display: block;
-  }
-  .header .menu-btn:checked ~ .navbar-menu .nav{
-    max-height: 100%;
-    overflow: inherit;
-  }
-  .header .menu-btn:checked ~ .header .menu-icon .navicon{
+}
+
+.header .menu-btn:checked ~ .navbar-menu .nav {
+  max-height: 100%;
+  overflow: inherit;
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon {
     background: transparent;
-  }
-  .header .menu-btn:checked ~ .header .menu-icon .navicon::before {
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon::before {
     transform: rotate(-45deg);
 }
-.header .menu-btn:checked ~ .header .menu-icon .navicon::after {
+
+.header .menu-btn:checked ~ .menu-icon .navicon::after {
     transform: rotate(45deg);
 }
-.header .menu-btn:checked ~ .header .menu-icon .navicon::before,
-.header .menu-btn:checked ~ .header .menu-icon .navicon::after {
+
+.header .menu-btn:checked ~ .menu-icon .navicon::before,
+.header .menu-btn:checked ~ .menu-icon .navicon::after {
     top: 0;
 }
+
 @media screen and (max-width: 767px) {
     :root {
         --header-padding: 2rem 0 0;
     }
+
     .header {
         background: var(--color-black);
     }
+
     .header-container {
         flex-wrap: wrap;
         padding: 0 1.5rem;
     }
+
     .header .menu-icon {
         display: block;
     }
 }
+
 @media screen and (max-width: 480px) {
     .header-logo {
         flex-basis: 70%;
     }
 }
+
 @media screen and (min-width: 481px) and (max-width: 767px) {
     .header-logo {
         flex-basis: 79%;
     }
 }
-
-.header .menu-icon {
-    display: none;
-}
+  
   /* Header
       ============================= */
   
@@ -407,6 +385,40 @@
     align-items: center;
   }
 
+  .header .menu-icon{
+      cursor: pointer;
+      padding: 2.5rem;
+      position: relative;
+      user-select: none;
+  }
+
+  .header .menu-icon .navicon {
+      background: var(--color-white);
+      display: block;
+      width: 2rem;
+      height: .2rem;
+      position: relative;
+      transition: background .2s ease-out;
+  }
+
+  .header .menu-icon .navicon::before,
+  .header .menu-icon .navicon::after {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      background: var(--color-white);
+      transition: all .2s ease-out;
+  }
+  
+  .header .menu-icon .navicon::before {
+      top: .7rem;
+  }
+
+  .header .menu-icon .navicon::after {
+      top: -.7rem;
+  }
   
   /* Footer
       ============================= */
@@ -523,27 +535,31 @@
     justify-content: center;
     min-height: 35vh;
   }
-@media screen and (max-width: 767px){
-.section-hero {
+  @media screen and (max-width: 767px) {
+    .section-hero {
         margin: -0.1rem 0;
     }
-.hero-homepage {
+
+    .hero-homepage {
         background-position: 85% 0;
     }
+
     .section-hero .section-body {
         padding: 2rem;
     }
 }
   /* Section Latest news
       ============================= */
+  
   .section-latest-news .row {
     flex-direction: row-reverse;
   }
+
   @media screen and (max-width: 767px) {
-    .section-latest-news .row {
-        flex-direction: column;
-    }
-}
+      .section-latest-news .row {
+          flex-direction: column;
+      }
+  }
   
   /* Section SERVICES
       ============================= */
