--- a/0x03-responsive_design/08-styles.css
+++ b/0x03-responsive_design/08-styles.css
@@ -1,3 +1,4 @@
+
 /* SUMMARY
 1. GLOBAL
 2. LAYOUT
@@ -164,25 +165,21 @@
     color: var(--color-primary);
     background: var(--color-white);
   }
-  @media screen and (max-width: 480px) {
-    html {
-        font-size: 57%;
-    }
-}
-
-@media screen and (min-width: 481px) and (max-width: 767px) {
-    html {
-        font-size: 60%;
-    }
-}
-
   
+  @media screen and (max-width: 480px) {
+      html {
+          font-size: 57%;
+      }
+  }
+
+  @media screen and (min-width: 481px) and (max-width: 767px) {
+      html {
+          font-size: 60%;
+      }
+  }
   /* Helpers
       ============================= */
-      main img {
-        width: 100%;
-        height: auto;
-    }
+  
   .visually-hidden:not(:focus):not(:active) {
     position: absolute !important;
     height: 1px;
@@ -191,6 +188,11 @@
     clip: rect(1px, 1px, 1px, 1px);
     white-space: nowrap;
   }
+
+  main img {
+      width: 100%;
+      height: auto;
+  }
   
   /*** 2. LAYOUT ***/
   
@@ -198,6 +200,7 @@
       ============================= */
   
   .container {
+    width: 100%;
     max-width: 960px;
     margin-left: auto;
     margin-right: auto;
@@ -229,30 +232,24 @@
   }
 
   @media screen and (max-width: 767px) {
-    ul.row {
-        margin: 0;
-    }
-
-    .row {
-        flex-direction: column;
-    }
-
-    [class^='col-'] {
-        margin: 0 0 3rem 0;
-    }
-
-    .col-1-3,
-    .col-1-2 {
-        width: 100%;
-    }
-    :root {
+      :root {
         --section-padding: 5rem 1.5rem;
         --section-body-padding: 2rem 0 0;
-    }
-}
+      }
 
-  /* Grid section */
+      ul.row, .row {
+          flex-direction: column;
+          margin: 0;
+      }
 
+      [class^="col-"] {
+          margin: 0 0 3rem 0;
+      }
+
+      .col-1-3, .col-1-2 {
+          width: 100%;
+      }
+  }
   
   /* Navbar
       ============================= */
@@ -302,107 +299,25 @@
     background-color: var(--color-primary);
     width: 100%;
   }
+
   @media screen and (max-width: 767px) {
-    .navbar-menu {
-        display: none;
-    }
-    :root {
-        --nav-item-margin: 0;
-    }
-    .navbar-menu {
-        flex: 1;
-    }    
-    .header .nav{
-        flex-direction: column;
-        overflow: hidden;
-        max-height: 0;
-        transition: max-height .2s ease-out;
-    }
-    .header .menu-icon{
-        position: relative;
-        padding: 2.5rem;
-        user-select: none;
-        cursor: pointer;
+      :root {
+          --nav-item-margin: 0
       }
-      .header .menu-icon .navicon{
-        position: relative;
-        background-color: var(--color-white);
-        display: block;
-        width: 2rem;
-        height: .2rem;
-        transition: background .2s ease-out;
+
+      .navbar-menu {
+          display: none;
+          flex: 1;
       }
-      .header .menu-icon .navicon::before,
-    .header .menu-icon .navicon::after {
-        content: '';
-        display: block;
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        background: var(--color-white);
-        transition: all .2s ease-out;
-    }
-    .header .menu-icon .navicon::before {
-        top: .7rem;
-    }
-    .header .menu-icon .navicon::after {
-        top: -.7rem; 
-    }
-  }
 
-  /* menu btn */
-  .header .menu-btn{
-    display: none;
+      .header .nav {
+          flex-direction: column;
+          overflow: hidden;
+          max-height: 0;
+          transition: max-height .2s ease-out;
+      }
   }
-  .header .menu-btn:checked ~ .navbar-menu{
-    display: block;
-  }
-  .header .menu-btn:checked ~ .navbar-menu .nav{
-    max-height: 100%;
-    overflow: inherit;
-  }
-  .header .menu-btn:checked ~ .header .menu-icon .navicon{
-    background: transparent;
-  }
-  .header .menu-btn:checked ~ .header .menu-icon .navicon::before {
-    transform: rotate(-45deg);
-}
-.header .menu-btn:checked ~ .header .menu-icon .navicon::after {
-    transform: rotate(45deg);
-}
-.header .menu-btn:checked ~ .header .menu-icon .navicon::before,
-.header .menu-btn:checked ~ .header .menu-icon .navicon::after {
-    top: 0;
-}
-@media screen and (max-width: 767px) {
-    :root {
-        --header-padding: 2rem 0 0;
-    }
-    .header {
-        background: var(--color-black);
-    }
-    .header-container {
-        flex-wrap: wrap;
-        padding: 0 1.5rem;
-    }
-    .header .menu-icon {
-        display: block;
-    }
-}
-@media screen and (max-width: 480px) {
-    .header-logo {
-        flex-basis: 70%;
-    }
-}
-@media screen and (min-width: 481px) and (max-width: 767px) {
-    .header-logo {
-        flex-basis: 79%;
-    }
-}
-
-.header .menu-icon {
-    display: none;
-}
+  
   /* Header
       ============================= */
   
@@ -419,6 +334,41 @@
     align-items: center;
   }
 
+  .header .menu-icon{
+      cursor: pointer;
+      padding: 2.5rem;
+      position: relative;
+      user-select: none;
+      display: none;
+  }
+
+  .header .menu-icon .navicon {
+      background: var(--color-white);
+      display: block;
+      width: 2rem;
+      height: .2rem;
+      position: relative;
+      transition: background .2s ease-out;
+  }
+
+  .header .menu-icon .navicon::before,
+  .header .menu-icon .navicon::after {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      background: var(--color-white);
+      transition: all .2s ease-out;
+  }
+  
+  .header .menu-icon .navicon::before {
+      top: .7rem;
+  }
+
+  .header .menu-icon .navicon::after {
+      top: -.7rem;
+  }
   
   /* Footer
       ============================= */
@@ -535,27 +485,32 @@
     justify-content: center;
     min-height: 35vh;
   }
-@media screen and (max-width: 767px){
-.section-hero {
-        margin: -0.1rem 0;
-    }
-.hero-homepage {
-        background-position: 85% 0;
-    }
-    .section-hero .section-body {
-        padding: 2rem;
-    }
-}
+
+  @media screen and (max-width: 767px) {
+      .section-hero {
+          margin: -0.1rem 0;
+      }
+
+      .hero-homepage {
+          background-position: 85% 0;
+      }
+
+      .section-hero .section-body {
+          padding: 2rem;
+      }
+  }
   /* Section Latest news
       ============================= */
+  
   .section-latest-news .row {
     flex-direction: row-reverse;
   }
+
   @media screen and (max-width: 767px) {
-    .section-latest-news .row {
-        flex-direction: column;
-    }
-}
+      .section-latest-news .row {
+          flex-direction: column;
+      }
+  }
   
   /* Section SERVICES
       ============================= */
@@ -644,19 +599,21 @@
   .card-work:hover .card-title {
     opacity: 1;
   }
-  @media screen and (max-width: 767px){
-    .card-work .card-inner{
-        --text-color: var(--color-white);
-        position: relative;
-    }
-    .card-work .card-title {
-        opacity: 1;
-    }
-    .card-work .card-title a {
-        padding: 2rem 1rem 0 1rem;
-    }
-  }
 
+  @media screen and (max-width: 767px) {
+      .card-work .card-inner {
+          --text-color: var(--color-white);
+          position: relative;
+      }
+
+      .card-work .card-title {
+          opacity: 1;
+      }
+
+      .card-work .card-title a {
+          padding: 2rem 1rem 0 1rem;
+      }
+  }
   
   /* Card SERVICES
       ============================= */
@@ -1027,4 +984,66 @@
     padding: 0;
     cursor: text;
     margin: 0 1rem;
+  }
+
+  /* menu btn */
+  .header .menu-btn {
+      display: none;
+  }
+
+  .header .menu-btn:checked ~ .navbar-menu {
+      display: block;
+  }
+
+  .header .menu-btn:checked ~ .navbar-menu .nav {
+    max-height: 100%;
+    overflow: inherit;
+  }
+
+  .header .menu-btn:checked ~ .menu-icon .navicon {
+      background: transparent;
+  }
+
+  .header .menu-btn:checked ~ .menu-icon .navicon::before {
+      transform: rotate(-45deg);
+  }
+
+  .header .menu-btn:checked ~ .menu-icon .navicon::after {
+      transform: rotate(45deg);
+  }
+
+  .header .menu-btn:checked ~ .menu-icon .navicon::before,
+  .header .menu-btn:checked ~ .menu-icon .navicon::after {
+      top: 0;
+  }
+
+  @media screen and (max-width: 767px) {
+      :root {
+          --header-padding: 2rem 0 0;
+      }
+
+      .header {
+          background: var(--color-black);
+      }
+
+      .header-container {
+          flex-wrap: wrap;
+          padding: 0 1.5rem;
+      }
+
+      .header .menu-icon {
+          display: block;
+      }
+  }
+
+  @media screen and (max-width: 480px) {
+      .header-logo {
+          flex-basis: 70%;
+      }
+  }
+
+  @media screen and (min-width: 481px) and (max-width: 767px) {
+      .header-logo {
+          flex-basis: 79%;
+      }
   }
